@@ -1,3 +1,10 @@
+2007-04-05 Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/plugin_manager.py: Got the popup key working.
+	* src/lib/accerciser/hotkey_manager.py: Made the keyval
+	cellrenderer a simple CellRendererText instead of an inaccessible
+	CellRendererColumn.
+	
 2007-04-05 Peter Parente  <parente@cs.unc.edu>
 
 	* pyatspi: Temporary home of official Python bindings for AT-SPI
